src/objects/Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Address_1__c  &amp;  
Address_2__c  &amp;  
City__c  &amp;  
State__c  &amp;  
Country__c  &amp;  
Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Warehouse Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Warehouse</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Warehouse Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>